--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <div class="content">
     <h1>Task Master</h1>
     {% if tasks|length < 1 %}
-    <h4>add some tasks please</h4>
+    <h4>Please add some tasks first </h4>
     
     {% else %}
     <table>
@@ -23,18 +23,20 @@
                 <td>{{ task.content }}</td>
                 <td>{{ task.date_created.date() }}</td>
                 <td>
-                    <a href="/delete/{{task.id}}">Delete</a>
+                    <a href="/delete/{{task.id}}" style="color: red;">Delete</a>
                     <br>
                     <a href="/update/{{task.id}}">Update</a>
                 </td>
             </tr>
         {% endfor %}
     </table>
-
-    <form action="/" method="POST">
-        <input type="text" name="content" id="content"/>
-        <input type="submit" value="Add Task">
-    </form>
     {% endif %}
+    
+    <div id="addtask">
+        <form action="/" method="POST" >
+            <input type="text" name="content" id="content"/>
+            <input type="submit" value="Add Task">
+        </form>
+    </div>
 </div>
 {% endblock%}
