--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
+{% block head %} Video Rental Store {% endblock %}
 
 {% block content %}
-
 <div class="container">
     <h1>Film Catalog</h1>
     {% if tasks|length < 1 %}
