--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -33,10 +33,10 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Rentals</a>
+              <a class="nav-link" href="/rentals">Rentals</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Customers</a>
+              <a class="nav-link" href="/customers">Customers</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
