--- a/templates/update.html
+++ b/templates/update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block head %}
+{% block title %}
 <title>update films</title>
 {% endblock%}
 
-{% block body %}
-<div class="content">
+{% block content %}
+<div class="container">
     <h1>Update Film</h1>
 
     <div class="form">
