--- a/templates/customers.html
+++ b/templates/customers.html
@@ -6,29 +6,34 @@
 
 {% block content %}
 <div class="container">
-    <h1>Customer List</h1>
+    <h2>Customer List</h2>
+    <hr/>
     {% if tasks|length < 1 %}
     <h4>Please add some customers first </h4>
     
     {% else %}
-    <table>
-        <tr>
-            <th>Customer ID</th>
-            <th>Email</th>
-            <th>First Name</th>
-            <th>Last name</th>
-            <th>Bonus Points</th>
-        </tr>
-
-        {% for task in tasks%}
-            <tr>
-                <td>{{ task.id }}</td>
-                <td>{{ task.email }}</td>
-                <td>{{ task.first_name }}</td>
-                <td>{{ task.last_name }}</td>
-                <td>{{ task.bonus_points }}</td>
+    <table class="table table-hover">
+        <thead class="table-dark">
+            <tr class="bg-info">
+                <th>Customer ID</th>
+                <th>Email</th>
+                <th>First Name</th>
+                <th>Last name</th>
+                <th>Bonus Points</th>
             </tr>
-        {% endfor %}
+        </thead>
+
+        <tbody>
+            {% for task in tasks%}
+                <tr>
+                    <td>{{ task.id }}</td>
+                    <td>{{ task.email }}</td>
+                    <td>{{ task.first_name }}</td>
+                    <td>{{ task.last_name }}</td>
+                    <td>{{ task.bonus_points }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
     {% endif %}
     <br/>
@@ -42,7 +47,5 @@
         </form>
     </div>
     <br/>
-    <br/>
-    <a href="/rentals">check rentals</a>
 </div>
 {% endblock%}
