--- a/templates/index.html
+++ b/templates/index.html
@@ -3,35 +3,39 @@
 
 {% block content %}
 <div class="container">
-    <h1>Film Catalog</h1>
+    <h2>Film Catalog</h2>
+    <hr/>
     {% if tasks|length < 1 %}
     <h4>Please add some films first </h4>
     
     {% else %}
-    <table>
-        <tr>
-            <th>Film Name</th>
-            <th>Category</th>
-            <th>Added</th>
-            <th>Rented</th>
-            <th>Operation</th>
-        </tr>
-
-        {% for task in tasks%}
-            <tr>
-                <td>{{ task.content }}</td>
-                <td>{{ task.category }}</td>
-                <td>{{ task.date_created.date() }}</td>
-                <td>{{ "Y" if task.completed else "N" }}</td>
-                <td>
-                    <a href="/update/{{task.id}}">Update</a>
-                    <br>
-                    <a href="/delete/{{task.id}}" style="color: red;">Delete</a>
-                    <br>
-                    <a href="/rent/{{task.id}}">Rent</a>
-                </td>
+    <table class="table table-hover">
+        <thead class="table-dark">
+            <tr class="bg-primary">
+                <th>Film Name</th>
+                <th>Category</th>
+                <th>Added</th>
+                <th>Rented</th>
+                <th>Operation</th>
             </tr>
-        {% endfor %}
+        </thead>
+        <tbody>
+            {% for task in tasks%}
+                <tr>
+                    <td>{{ task.content }}</td>
+                    <td>{{ task.category }}</td>
+                    <td>{{ task.date_created.date() }}</td>
+                    <td>{{ "Y" if task.completed else "N" }}</td>
+                    <td>
+                        <a href="/update/{{task.id}}">Update</a>
+                        <br>
+                        <a href="/delete/{{task.id}}" style="color: red;">Delete</a>
+                        <br>
+                        <a href="/rent/{{task.id}}">Rent</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
     </table>
     {% endif %}
     
@@ -42,7 +46,5 @@
         </form>
     </div>
     <br>
-    <a href="/rentals">check rentals</a>
-    <a href="/customers">view customers</a>
 </div>
 {% endblock %}
