--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div class="container">
     <h2>Film Catalog</h2>
     <hr/>
-    {% if tasks|length < 1 %}
+    {% if films|length < 1 %}
     <h4>Please add some films first </h4>
     
     {% else %}
@@ -20,18 +20,24 @@
             </tr>
         </thead>
         <tbody>
-            {% for task in tasks%}
+            {% for film in films %}
                 <tr>
-                    <td>{{ task.content }}</td>
-                    <td>{{ task.category }}</td>
-                    <td>{{ task.date_created.date() }}</td>
-                    <td>{{ "Y" if task.completed else "N" }}</td>
+                    <td>{{ film.name }}</td>
+                    <td>{{ film.category }}</td>
+                    <td>{{ film.date_added.date() }}</td>
+                    <td>{{ "Y" if film.available else "N" }}</td>
                     <td>
-                        <a href="/update/{{task.id}}">Update</a>
-                        <br>
-                        <a href="/delete/{{task.id}}" style="color: red;">Delete</a>
-                        <br>
-                        <a href="/rent/{{task.id}}">Rent</a>
+                        <div class="row align-items-center">
+                            <div class="col-2">
+                                <a class="btn btn-warning" href="/rent/{{film.id}}">Rent</a>
+                            </div>
+                            <div class="col-2">
+                                <a class="btn btn-primary" href="/update/{{film.id}}">Update</a>
+                            </div>
+                            <div class="col-2">
+                                <a class="btn btn-danger" href="/delete/{{film.id}}">Delete</a>
+                            </div>
+                        </div>
                     </td>
                 </tr>
             {% endfor %}
@@ -39,10 +45,10 @@
     </table>
     {% endif %}
     
-    <div id="addtask">
+    <div id="addfilm">
         <form action="/" method="POST" >
-            <input type="text" name="content" id="content"/>
-            <input type="submit" value="Add ">
+            <input type="text" name="fname" id="fname"/>
+            <input type="submit" value="Add">
         </form>
     </div>
     <br>
