--- a/templates/rent.html
+++ b/templates/rent.html
@@ -9,10 +9,10 @@
     <h1>Rent a film</h1>
 
     <div class="form">
-        <form action="/rent/{{task.id}}" method="POST">
+        <form action="/rent/{{film.id}}" method="POST">
             <!-- <input type="text" name="rentid" id="rent_id" value=""/> -->
-            <!-- <input type="text" name="filmid" id="filmid" value="{{task.id}}"/> -->
-            <input type="text" name="filmname" id="film_name" value="{{task.content}}"/>
+            <!-- <input type="text" name="filmid" id="filmid" value="{{film.id}}"/> -->
+            <input type="text" name="filmname" id="film_name" value="{{film.name}}"/>
             <input type="number" name="customerid" id="cust_id" value="customer id"/>
             <input type="date" name="startdate" id="start_date"/>
             <input type="date" name="enddate" id="end_date"/>
