--- a/templates/rentals.html
+++ b/templates/rentals.html
@@ -8,7 +8,7 @@
 <div class="container">
     <h2>Rental records</h2>
     <hr/>
-    {% if tasks|length < 1 %}
+    {% if rentals|length < 1 %}
     <h4>No film has been rented out yet!</h4>
     <br>
     
@@ -27,16 +27,16 @@
         </thead>
 
         <tbody>
-            {% for task in tasks%}
+            {% for rental in rentals%}
                 <tr>
-                    <td>{{ task.id }}</td>
-                    <td>{{ task.cust_id }}</td>
-                    <td>{{ task.film_name }}</td>
-                    <td>{{ task.start_date }}</td>
-                    <td>{{ task.end_date }}</td>
+                    <td>{{ rental.id }}</td>
+                    <td>{{ rental.cust_id }}</td>
+                    <td>{{ rental.film_name }}</td>
+                    <td>{{ rental.start_date }}</td>
+                    <td>{{ rental.end_date }}</td>
                     <td>30</td>
                     <td>
-                        <a href="/return/{{task.id}}">Return</a>
+                        <a href="/return/{{rental.id}}">Return</a>
                     </td>
                 </tr>
             {% endfor %}
