--- a/templates/update.html
+++ b/templates/update.html
@@ -9,8 +9,8 @@
     <h1>Update Film</h1>
 
     <div class="form">
-        <form action="/update/{{task.id}}" method="POST">
-            <input type="text" name="content" id="content" value="{{task.content}}"/>
+        <form action="/update/{{film.id}}" method="POST">
+            <input type="text" name="fname" value="{{film.name}}"/>
             <input type="submit" value="Update">
         </form>
     </div>
