--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <th>Category</th>
                 <th>Added</th>
                 <th>Available</th>
-                <th>Operations</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
