--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,14 @@
 <body> 
     {% block navbar %}
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Video Rental Store</a>
+        <!-- <a class="navbar-brand" href="#">Video Rental Store</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
+
+        <a class="navbar-brand" href="#" >
+          <img id="logo" src="/static/img/logo-new.png" alt="">
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
@@ -34,13 +38,13 @@
               </div>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/customers">Customers</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="/rentals">Rentals</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/returns">Returns</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/customers">Customers</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
