--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,15 @@
     font-family: sans-serif;
 } */
 
-#addfilmform{
+/* img{ */
+    /* object-fit: none; Do not scale the image */
+    /* object-position: center; Center the image within the element */
+    /* width: 100%;
+    max-height: 40px;
+    margin-bottom: 1rem; */
+/* } */
+
+/* #addfilmform{
     border: rgb(226, 18, 18);
     border-width: 3px;
-}
+} */
