--- a/templates/add-rental.html
+++ b/templates/add-rental.html
@@ -70,7 +70,7 @@
                     </div>
                 </fieldset>
                 <div class="form-group">
-                    {{ form.submit(class="btn btn-info") }}
+                    {{ form.submit(class="btn btn-warning") }}
                 </div>
             </form>
         </div>
