--- a/templates/return-rental.html
+++ b/templates/return-rental.html
@@ -85,7 +85,7 @@
                     </div>
                 </fieldset>
                 <div class="form-group">
-                    {{ form.submit(class="btn btn-info") }}
+                    {{ form.submit(class="btn btn-success") }}
                 </div>
             </form>
         </div>
