--- a/videorentalstore/static/css/main.css
+++ b/videorentalstore/static/css/main.css
@@ -1,17 +1,17 @@
-/* body {
-    margin: 20px;
-    font-family: sans-serif;
-} */
+.crop {
+    width: 200px;
+    height: 70px;
+    overflow: hidden;
+}
 
-/* img{ */
-    /* object-fit: none; Do not scale the image */
-    /* object-position: center; Center the image within the element */
-    /* width: 100%;
-    max-height: 40px;
-    margin-bottom: 1rem; */
-/* } */
+.crop img {
+    width: 200px;
+    height: 70px;
+    margin: -65px -65px 0 0px;
+}
 
-/* #addfilmform{
-    border: rgb(226, 18, 18);
-    border-width: 3px;
+/* .crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
 } */
