--- a/videorentalstore/templates/base.html
+++ b/videorentalstore/templates/base.html
@@ -11,19 +11,19 @@
 
 <body> 
     {% block navbar %}
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="storeNavbar">
         <!-- <a class="navbar-brand" href="#">Video Rental Store</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button> -->
 
-        <a class="navbar-brand" href="#" >
-          <img id="logo" src="/static/img/logo-new.png" alt="">
+        <a class="navbar-brand corp" href="/" >
+          <img id="logo" src="/static/img/vrs-logo-new.png" alt="storeLogo">
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item dropdown">
@@ -37,29 +37,35 @@
                 <a class="dropdown-item" href="#">Old films</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/customers">Customers</a>
-            </li>
+            
             <li class="nav-item">
               <a class="nav-link" href="/rentals">Rentals</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/returns">Returns</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/customers">Customers</a>
+            </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </nav>
     {% endblock %}
     <br/>
-    {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
         <ul class=flashes>
-        {% for message in messages %}
-          <li style="background-color:pink;">{{ message }}</li>
+        {% for category, message in messages %}
+          {% if category == "error" %}
+            <li class="{{ category }}" style="background-color:pink;">{{ message }}</li>
+          {% endif %}
+          {% if category == "success" %}
+            <li class="{{ category }}" style="background-color:lightgreen;">{{ message }}</li>
+          {% endif %}
         {% endfor %}
         </ul>
       {% endif %}
