--- a/videorentalstore/templates/return-rental.html
+++ b/videorentalstore/templates/return-rental.html
@@ -23,7 +23,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.film_name(class="form-control form-control-lg", placeholder="{ film.name }") }}
+                            {{ form.film_name(class="form-control form-control-lg", readonly=true, placeholder="{ film.name }") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
@@ -36,7 +36,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.cust_email(class="form-control form-control-lg") }}
+                            {{ form.cust_email(class="form-control form-control-lg", readonly=true) }}
                         {% endif %}
                     </div>
                     <div class="form-group">
@@ -50,7 +50,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.start_date(class="form-control form-control-lg", type="date") }}
+                            {{ form.start_date(class="form-control form-control-lg", type="date", readonly=true) }}
                         {% endif %}
                     </div>
 
@@ -65,7 +65,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.due_date(class="form-control form-control-lg", type="date") }}
+                            {{ form.due_date(class="form-control form-control-lg", type="date", readonly=true) }}
                         {% endif %}
                     </div>
 
@@ -80,7 +80,7 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.return_date(class="form-control form-control-lg", type="date") }}
+                            {{ form.return_date(class="form-control form-control-lg", type="date", readonly=true) }}
                         {% endif %}
                     </div>
                 </fieldset>
