--- a/videorentalstore/templates/returns.html
+++ b/videorentalstore/templates/returns.html
@@ -37,7 +37,7 @@
                 <th>Category</th>
                 <th>Start Date</th>
                 <th>Return Date</th>
-                <th>Overdue days</th>
+                <th>Overdue Days</th>
                 <th>Late Charge ($SEK)</th>
                 <th>Total Price ($SEK)</th>
             </tr>
