final production deployment

--- a/videorentalstore/templates/rentals.html
+++ b/videorentalstore/templates/rentals.html
@@ -25,7 +25,7 @@
     <hr/>
     {% if rentals|length < 1 %}
     <h4>No film has been rented out yet!</h4>
-    <h4>Please make a rental through the film catelog!</h4>
+    <h4>Please make a rental through the film catalogue!</h4>
     <br>
     
     {% else %}
