--- a/videorentalstore/templates/index.html
+++ b/videorentalstore/templates/index.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row align-items-center">
         <div class="col-8">
-            <h2>Film Catalog</h2>
+            <h2>Film Catalogue</h2>
         </div>
         <!-- <div class="col-2">
             <a class="btn btn-outline-primary" href="#addfilmform">Add a film</a>
