--- a/videorentalstore/templates/base.html
+++ b/videorentalstore/templates/base.html
@@ -12,18 +12,12 @@
 <body> 
     {% block navbar %}
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="storeNavbar">
-        <!-- <a class="navbar-brand" href="#">Video Rental Store</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
-
-        <a class="navbar-brand corp" href="/" >
-          <img id="logo" src="/static/img/vrs-logo-new.png" alt="storeLogo">
+        <a class="navbar-brand corp"  href="/" >
+          <img id="logo" src="/static/img/vrs-logo-crop.png" height="70px" width="200px" alt="storeLogo">
         </a>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item dropdown">
